--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7373461" />
+        app:layout_constraintGuide_begin="539dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
