- Dodan UI v nastavitvah - Dodani zvoki pozivnikov - Dodan AlertDialog ko se klikne "Zvok" v nastavitvah - Dodan gumb "Shrani"

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,10 +23,11 @@
         android:id="@+id/checkBoxSilentMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="32dp"
         android:text="@string/zvoni_tudi_v_tihem_na_inu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingsText" />
 
@@ -34,9 +35,10 @@
         android:id="@+id/checkBoxSound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
+        android:layout_marginStart="56dp"
         android:text="@string/zvok"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxSilentMode" />
 
@@ -44,9 +46,10 @@
         android:id="@+id/checkBoxVibration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
+        android:layout_marginStart="56dp"
         android:text="@string/vibriraj"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxSound" />
 
@@ -54,10 +57,10 @@
         android:id="@+id/seekBarVolume"
         android:layout_width="344dp"
         android:layout_height="34dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginBottom="412dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
@@ -66,13 +69,16 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="300dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/glasnost"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarVolume"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBoxVibration" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxVibration"
+        app:layout_constraintVertical_bias="0.63" />
 
     <TextView
         android:id="@+id/textViewPagerSound"
@@ -83,4 +89,17 @@
         android:text="@string/zvok_pozivnika"
         app:layout_constraintStart_toEndOf="@+id/checkBoxSound"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxSilentMode" />
+
+    <Button
+        android:id="@+id/saveSettingsBtn"
+        android:layout_width="189dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="185dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="81dp"
+        android:text="@string/shrani"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
