--- a/app/src/main/res/layout/activity_add_pager.xml
+++ b/app/src/main/res/layout/activity_add_pager.xml
@@ -26,22 +26,27 @@
         android:layout_width="92dp"
         android:layout_height="83dp"
         android:layout_marginStart="284dp"
+        android:layout_marginTop="465dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="52dp"
         android:backgroundTint="#00FFFFFF"
         android:contentDescription="@string/todo"
         android:tint="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="292dp"
         android:layout_marginTop="472dp"
-        android:contentDescription="@string/todo"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="88dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:contentDescription="TODO" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
