--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,60 +24,48 @@
         android:id="@+id/addPagerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="434dp"
         android:layout_marginEnd="32dp"
         android:text="@string/dodaj_pozivnik"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintStart_toEndOf="@+id/onoffSwitch"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <Button
         android:id="@+id/settingBtn"
         android:layout_width="136dp"
         android:layout_height="49dp"
+        android:layout_marginStart="83dp"
         android:layout_marginEnd="32dp"
         android:text="@string/nastavitve"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/onoffSwitch"
         app:layout_constraintTop_toBottomOf="@+id/addPagerBtn" />
-
-    <Switch
-        android:id="@+id/onoffSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:button="@color/colorPrimaryDark"
-        android:buttonTint="#870000"
-        android:thumbTint="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintStart_toEndOf="@+id/onoffText"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <TextView
         android:id="@+id/onoffText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="475dp"
         android:text="@string/vklopi"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#870000"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+    <Switch
+        android:id="@+id/onoffSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="539dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_percent="0.8864569" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="480dp"
+        android:button="@color/colorPrimaryDark"
+        android:buttonTint="#870000"
+        android:thumbTint="@color/colorAccent"
+        app:layout_constraintStart_toEndOf="@+id/onoffText"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
