- spremenjeno ime v addPagerBtn

--- a/app/src/main/res/layout/activity_add_pager.xml
+++ b/app/src/main/res/layout/activity_add_pager.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/gumbDodajPozivnike"
+        android:id="@+id/addPagerBtn"
         android:layout_width="92dp"
         android:layout_height="83dp"
         android:layout_marginStart="284dp"
