Fix main layout Fix volume select crash

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,48 +24,51 @@
         android:id="@+id/addPagerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="434dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:text="@string/dodaj_pozivnik"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/onoffSwitch"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Button
         android:id="@+id/settingBtn"
         android:layout_width="136dp"
         android:layout_height="49dp"
-        android:layout_marginStart="83dp"
         android:layout_marginEnd="32dp"
         android:text="@string/nastavitve"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/onoffSwitch"
         app:layout_constraintTop_toBottomOf="@+id/addPagerBtn" />
 
     <TextView
         android:id="@+id/onoffText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="475dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:text="@string/vklopi"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#870000"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <Switch
         android:id="@+id/onoffSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="480dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:button="@color/colorPrimaryDark"
         android:buttonTint="#870000"
         android:thumbTint="@color/colorAccent"
         app:layout_constraintStart_toEndOf="@+id/onoffText"
-        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="156dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
