--- a/app/src/main/res/layout/activity_add_pager.xml
+++ b/app/src/main/res/layout/activity_add_pager.xml
@@ -23,30 +23,34 @@
 
     <ImageButton
         android:id="@+id/addPagerBtn"
-        android:layout_width="92dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="465dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="52dp"
+        android:layout_width="74dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="80dp"
         android:backgroundTint="#00FFFFFF"
-        android:contentDescription="@string/todo"
-        android:tint="#00FFFFFF"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="19dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="296dp"
+        android:layout_marginBottom="112dp"
+        android:text="+"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="#078B32"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="472dp"
-        android:layout_marginEnd="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:contentDescription="TODO" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="196dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
