--- a/app/src/main/res/layout/activity_add_new_pager_dialog.xml
+++ b/app/src/main/res/layout/activity_add_new_pager_dialog.xml
@@ -1,78 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textFireSMS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="FireSMS"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="60dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/textPagerName"
         android:layout_width="283dp"
         android:layout_height="39dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Ime pozivnika"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="92dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textFireSMS" />
 
     <EditText
         android:id="@+id/textPhoneNumber"
         android:layout_width="283dp"
         android:layout_height="39dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Telefonska številka "
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="131dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPagerName" />
 
     <EditText
         android:id="@+id/textKeyword"
         android:layout_width="283dp"
         android:layout_height="39dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Beseda"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />
 
     <Button
         android:id="@+id/addNewPagerBtn"
         android:layout_width="89dp"
         android:layout_height="37dp"
+        android:layout_marginTop="8dp"
         android:text="DODAJ"
         android:textSize="14sp"
-        tools:layout_editor_absoluteX="251dp"
-        tools:layout_editor_absoluteY="216dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textKeyword" />
 
     <Button
         android:id="@+id/cancelAddPager"
         android:layout_width="89dp"
         android:layout_height="37dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="24dp"
         android:text="Prekliči"
         android:textSize="14sp"
-        tools:layout_editor_absoluteX="251dp"
-        tools:layout_editor_absoluteY="253dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addNewPagerBtn" />
 
     <Switch
         android:id="@+id/switchIntervencijeNet"
         android:layout_width="144dp"
         android:layout_height="27dp"
+        android:layout_marginTop="8dp"
         android:text="Intervencije.net"
         android:textColor="#870000"
         android:thumbTint="#870000"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="216dp" />
+        app:layout_constraintEnd_toStartOf="@+id/addNewPagerBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textKeyword" />
 
     <TextView
         android:id="@+id/textIntervencijeText"
@@ -82,7 +96,8 @@
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textSize="12sp"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="243dp" />
+        app:layout_constraintEnd_toStartOf="@+id/cancelAddPager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchIntervencijeNet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
