--- a/app/src/main/res/layout/activity_add_new_pager_dialog.xml
+++ b/app/src/main/res/layout/activity_add_new_pager_dialog.xml
@@ -23,42 +23,33 @@
         android:layout_width="283dp"
         android:layout_height="39dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="9dp"
         android:ems="10"
+        android:hint="Ime pozivnika"
         android:inputType="textPersonName"
-        android:text="Ime pozivnika"
+        app:layout_constraintBottom_toTopOf="@+id/textPhoneNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textFireSMS" />
 
     <EditText
-        android:id="@+id/textPhoneNumber"
-        android:layout_width="283dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Telefonska številka "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPagerName" />
-
-    <EditText
         android:id="@+id/textKeyword"
         android:layout_width="283dp"
         android:layout_height="39dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
+        android:hint="Beseda"
         android:inputType="textPersonName"
-        android:text="Beseda"
+        app:layout_constraintBottom_toTopOf="@+id/addNewPagerBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/addNewPagerBtn"
         android:layout_width="89dp"
         android:layout_height="37dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:text="DODAJ"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,12 +60,14 @@
         android:layout_width="89dp"
         android:layout_height="37dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:text="Prekliči"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addNewPagerBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/addNewPagerBtn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Switch
         android:id="@+id/switchIntervencijeNet"
@@ -99,5 +92,17 @@
         app:layout_constraintEnd_toStartOf="@+id/cancelAddPager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switchIntervencijeNet" />
+
+    <EditText
+        android:id="@+id/textPhoneNumber"
+        android:layout_width="283dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="7dp"
+        android:ems="10"
+        android:hint="Dodaj številko"
+        android:inputType="phone"
+        app:layout_constraintBottom_toTopOf="@+id/textKeyword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
