--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,4 +71,17 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_end="156dp" />
 
+    <ListView
+        android:id="@+id/listViewSMS"
+        android:layout_width="347dp"
+        android:layout_height="430dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/addPagerBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
