--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -99,12 +99,12 @@
 
     <CheckBox
         android:id="@+id/checkBoxShowAlertDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="352dp"
+        android:layout_height="44dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="137dp"
-        android:text="Prikaži samo notifikacijo v primeru da je telefon odklenjen"
+        android:text="@string/prika_i_samo_notifikacijo_v_primeru_da_je_telefon_odklenjen"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +119,7 @@
         android:layout_marginStart="47dp"
         android:layout_marginTop="95dp"
         android:layout_marginEnd="205dp"
-        android:text="OPOZORILO"
+        android:text="@string/opozorilo"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,12 +127,12 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="227dp"
-        android:layout_height="91dp"
+        android:layout_width="229dp"
+        android:layout_height="71dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="81dp"
+        android:layout_marginBottom="101dp"
         android:singleLine="false"
-        android:text="Ob vsaki spremenjeni nastavitvi obvezno testiraj pozivnik! V času 5 sekund bo test pričel z izvajanjem. V tem času lahko izklopite ekran. "
+        android:text="@string/ob_vsaki_spremenjeni_nastavitvi_obvezno_testiraj_pozivnik_v_asu_5_sekund_bo_test_pri_el_z_izvajanjem_v_tem_asu_lahko_izklopite_ekran"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
