--- a/app/src/main/res/layout/activity_developer_options.xml
+++ b/app/src/main/res/layout/activity_developer_options.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="163dp"
         android:layout_marginEnd="128dp"
-        android:layout_marginBottom="452dp"
-        android:text="Test alerter"
+        android:layout_marginBottom="456dp"
+        android:text="@string/test_alerter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
