minor fixes in alerter

--- a/app/src/main/res/layout/activity_developer_options.xml
+++ b/app/src/main/res/layout/activity_developer_options.xml
@@ -10,12 +10,12 @@
         android:id="@+id/testAlerterBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginBottom="456dp"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="189dp"
+        android:layout_marginEnd="129dp"
         android:text="@string/test_alerter"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="testAlerterBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
